--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:clean": "rm -rf node_modules package-lock.json && npm install && vite build",
+    "build:deploy": "npm install --legacy-peer-deps --ignore-optional && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -81,5 +83,12 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "overrides": {
+    "rollup": {
+      "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "4.9.5"
+      }
+    }
   }
 }
