Trying to fix cloudflare deploymen

--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,7 @@ arch=x64
 legacy-peer-deps=true
 # Skip optional dependencies that cause build issues
 ignore-optional=true
+# Force specific Rollup version to avoid native module issues
+rollup-version=4.9.5
+# Disable native addons that cause issues
+build-from-source=false
