--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "build:clean": "rm -rf node_modules package-lock.json && npm install && vite build",
     "build:deploy": "npm install --legacy-peer-deps --ignore-optional && vite build",
-    "build:force": "npm install --legacy-peer-deps --ignore-optional --no-optional --force && npm install rollup@4.9.5 --save-dev --legacy-peer-deps && vite build",
+
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -80,6 +80,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "rollup": "4.9.5",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
@@ -90,15 +91,6 @@
       "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5"
       }
-    },
-    "vite": {
-      "dependencies": {
-        "rollup": "^4.9.5"
-      }
     }
-  },
-  "resolutions": {
-    "rollup": "^4.9.5",
-    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
