--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,5 @@
 ignore-optional=true
 # Use legacy peer deps to avoid conflicts
 legacy-peer-deps=true
+# Force npm to be used instead of bun
+engine-strict=false
