--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build:dev": "vite build --mode development",
     "build:clean": "rm -rf node_modules package-lock.json && npm install && vite build",
     "build:deploy": "npm install --legacy-peer-deps --ignore-optional && vite build",
-
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -72,7 +71,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -80,7 +79,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
-    "rollup": "4.9.5",
+
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
